--- a/Sreejan/FlourishingScale.ipynb
+++ b/Sreejan/FlourishingScale.ipynb
@@ -378,6 +378,56 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre and Post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre data normality test: statistic=0.890637993812561, p-value=0.0016357311978936195\n",
+      "Post data normality test: statistic=0.9310023784637451, p-value=0.024061039090156555\n",
+      "statistic: 209.5, p-value: 0.3065044527251567\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import wilcoxon\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Load the pre and post survey data from separate CSV files\n",
+    "pre_data = pd.read_csv('./data/FlourishingScale/FlourishingScale_Pre.csv')\n",
+    "post_data = pd.read_csv('./data/FlourishingScale/FlourishingScale_Post.csv')\n",
+    "\n",
+    "# Merge the pre and post survey data on the 'uid' column\n",
+    "merged_data = pd.merge(pre_data, post_data, on='uid', suffixes=('_pre', '_post'))\n",
+    "\n",
+    "# Calculate the difference between post and pre total scores\n",
+    "merged_data['score_diff'] = merged_data['total_score_post'] - merged_data['total_score_pre']\n",
+    "\n",
+    "# Do normality test\n",
+    "stat_pre, p_pre = stats.shapiro(merged_data['total_score_pre'])\n",
+    "stat_post, p_post = stats.shapiro(merged_data['total_score_post'])\n",
+    "\n",
+    "print(f\"Pre data normality test: statistic={stat_pre}, p-value={p_pre}\")\n",
+    "print(f\"Post data normality test: statistic={stat_post}, p-value={p_post}\")\n",
+    "\n",
+    "# Perform Wilcoxon signed-rank test\n",
+    "statistic, p_value = wilcoxon(merged_data['total_score_post'], merged_data['total_score_pre'])\n",
+    "\n",
+    "print(f\"statistic: {statistic}, p-value: {p_value}\")"
+   ]
   }
  ],
  "metadata": {
@@ -396,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
