--- a/Sreejan/PSS.ipynb
+++ b/Sreejan/PSS.ipynb
@@ -455,6 +455,55 @@
     "else:\n",
     "    print(\"There is no statistically significant difference between the pre and post scores.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre and Post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre data normality test: statistic=0.9556136131286621, p-value=0.12706716358661652\n",
+      "Post data normality test: statistic=0.9862052202224731, p-value=0.9057800769805908\n",
+      "statistic: -0.25404867231093, p-value: 0.8008276225934345\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Load the pre and post survey data from separate CSV files\n",
+    "pre_data = pd.read_csv('./data/PSS/PSS_Pre.csv')\n",
+    "post_data = pd.read_csv('./data/PSS/PSS_Post.csv')\n",
+    "\n",
+    "# Merge the pre and post survey data on the 'uid' column\n",
+    "merged_data = pd.merge(pre_data, post_data, on='uid', suffixes=('_pre', '_post'))\n",
+    "\n",
+    "# Calculate the difference between post and pre total scores\n",
+    "merged_data['score_diff'] = merged_data['total_score_post'] - merged_data['total_score_pre']\n",
+    "\n",
+    "stat_pre, p_pre = stats.shapiro(merged_data['total_score_pre'])\n",
+    "stat_post, p_post = stats.shapiro(merged_data['total_score_post'])\n",
+    "\n",
+    "print(f\"Pre data normality test: statistic={stat_pre}, p-value={p_pre}\")\n",
+    "print(f\"Post data normality test: statistic={stat_post}, p-value={p_post}\")\n",
+    "\n",
+    "# Perform related t-test\n",
+    "t_stat, p_value = stats.ttest_rel(merged_data['total_score_pre'], merged_data['total_score_post'])\n",
+    "\n",
+    "print(f\"statistic: {t_stat}, p-value: {p_value}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -473,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
