--- a/Sreejan/Panas.ipynb
+++ b/Sreejan/Panas.ipynb
@@ -263,6 +263,54 @@
     "pre_data.to_csv('./data/Panas/Panas_Pre.csv', index=False)\n",
     "post_data.to_csv('./data/Panas/Panas_Post.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre and Post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre data normality test: statistic=0.9637963175773621, p-value=0.2516540288925171\n",
+      "Post data normality test: statistic=0.9762231111526489, p-value=0.5842457413673401\n",
+      "T-statistic: -0.05351634106993908, p-value: 0.957608425249791\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Load the pre and post survey data from separate CSV files\n",
+    "pre_data = pd.read_csv('./data/Panas/Panas_Pre.csv')\n",
+    "post_data = pd.read_csv('./data/Panas/Panas_Post.csv')\n",
+    "\n",
+    "# Merge the pre and post survey data on the 'uid' column\n",
+    "merged_data = pd.merge(pre_data, post_data, on='uid', suffixes=('_pre', '_post'))\n",
+    "\n",
+    "stat_pre, p_pre = stats.shapiro(merged_data['Positive_Total_pre'])\n",
+    "stat_post, p_post = stats.shapiro(merged_data['Positive_Total_post'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f\"Pre data normality test: statistic={stat_pre}, p-value={p_pre}\")\n",
+    "print(f\"Post data normality test: statistic={stat_post}, p-value={p_post}\")\n",
+    "\n",
+    "\n",
+    "# Perform a paired t-test\n",
+    "t_stat, p_value = stats.ttest_rel(merged_data['Positive_Total_post'], merged_data['Positive_Total_pre'])\n",
+    "\n",
+    "print(f\"T-statistic: {t_stat}, p-value: {p_value}\")"
+   ]
   }
  ],
  "metadata": {
@@ -281,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
